# AI

./: .dockerignore  .env.example  .env_deploy  .gitignore  Dockerfile  Dockerfile_park  gemini.md  readme.md  requirements.txt
catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
data/: langgraph.mmd
docs/: DATA_QUALITY_FILTERING.md  FOOD_TYPE_FILTERING.md  RERANKING_COMPARISON.md  chat_graph.mmd  chat_stream_api.md  eval_pipeline.md  eval_pipeline_summary_kr.md  eval_report.md  worklog.md  worklog_2026_01_29.md
fastapi_app/: .dockerignore  Dockerfile  main.py  pyproject.toml  recommend.py  requirements.txt
fastapi_app/models/: chat_request.py  poi_ref.py  response.py  user_input.py
fastapi_app/routers/: chat.py
fastapi_app/services/: chat_graph.py  recommend_service.py  reranker.py  retriever.py
fastapi_app/services/chat_nodes/: answer.py  apply_location_filter.py  callbacks.py  config.py  correct_place.py  expand_radius.py  extract_place.py  general_answer.py  intent.py  llm_clients.py  mode.py  normalize_query.py  place_llm.py  rerank.py  resolve_anchor.py  retrieve.py  rewrite_query.py  route.py  state.py
fastapi_app/services/scorers/: __init__.py  base.py  cafe.py  restaurant.py  tourspot.py
fastapi_app/terraform/: main.tf
fastapi_app/tests/: test_recommend_service.py
fastapi_app/utils/: geo.py  google_geocode.py  google_place_autocomplete.py  naver_local_search.py  user_text_builder.py
logs/: rerank_comparison.csv
scripts/: check_candidates_min_k.py  check_content_diff.py  find_missing_labels.py  generate_silver_set.py  (+5 more)
(+74 files in other folders)
