[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.28",
    "langchain-openai>=0.2.9",
    "sse-starlette>=2.1.3",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
 
